# newlib

./: README.MD  configure  configure.ac
newlib/: configure.host
newlib/libc/stdlib/: mallocr.c
newlib/libc/sys/arm/: Makefile.am  Makefile.in  __getlogin.c  _exit.c  access.c  alarm.c  bdflush.c  chmod.c  clock.c  close.c  closedir.c  configure  configure.in  creat.c  crt0.S  debug.c  dir.c  dirname.c  dup.c  environ.c  err.c  execl.c  execle.c  execlp.c  execv.c  execve.c  execvp.c  fcntl.c  fork.c  format.c  fstat.c  getbsize.c  getentropy.c  getgrent.c  getgrouplist.c  getgroupmembership.c  gethostname.c  getlogin.c  getpass.c  getpid.c  (+56 more)
newlib/libc/sys/arm/include/: assert.h  btree.h  db.h  err.h  extern.h  fnmatch.h  limits.h  mntent.h  namespace.h  netdb.h  paths.h  poll.h  pwd.h  recno.h  reentrant.h  termios.h  time.h  ucontext.h  unistd.h  util.h  utmp.h  utmpx.h
newlib/libc/sys/arm/machine/: types.h
newlib/libc/sys/arm/netinet/: in.h
newlib/libc/sys/arm/pthread/: cthread_events.c
newlib/libc/sys/arm/sys/: _types.h  cdefs.h  debug.h  dirent.h  event.h  execargs.h  fcntl.h  features.h  fsreq.h  interrupts.h  ioctl.h  lists.h  mount.h  panic.h  resource.h  signal.h  stat.h  statvfs.h  syscalls.h  syslimits.h  termios.h  types.h  uio.h  unistd.h  utmp.h
